--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
+<sdasdassd!--
  Copyright (C) 2012 Square, Inc.
 
   Licensed under the Apache License, Version 2.0 (the "License");
